# SpongyMothIPM

./: .gitignore  LICENSE.txt  README.md  SpongyMothIPM.py  climatic_drivers.py  ipm_example.py  meson.build  pyproject.toml  test_kernels.py  visualization.py
SpongyMothIPM/: SpongyMothIPM.py  config.py  kernels.py  leaf_phenology.py  main.py  meson.build  meteorology.py  util.py  visualization.py
data/: 11752_lat_41.7074_lon_-77.0846_2025-06-11_123955.csv  11932_lat_42.4687_lon_-76.3787_2025-06-26_132939.csv  11932_lat_42.4702_lon_-76.3822_2025-06-11_111349.csv  Black Lake - Squares.csv  Bon Echo - Triangles.csv  Coxvale - Diamonds.csv  FemaleLarvae.csv  FemalePupae.csv  MaleLarvae.csv  MalePupae.csv  Massachussetts.csv  Northbrook - Circles.csv  Ontario.csv  Pennsylvania.csv  gdd_ncd.csv  local_phen.csv  victoria_hatch_dates.csv
data/mont_st_hilaire/: hilaire_88.csv  hilaire_89.csv  hilaire_90.csv  mont_st_hilaire_1980_1991.csv
notebooks/: gpu_test.py  pheno_model_comp.ipynb  phenology.ipynb  poster_figure.ipynb  training_example.ipynb
test/: test_kernels.py
tests/: conftest.py  test_kernels.py  test_transfers.py
